Synchronizing maps throws an exception when there is no maps directory in the project root;incorporated review comments